--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/skins/yellow.min.css">
+    <link rel="stylesheet" href="css/skins/red.min.css">
     <link rel="stylesheet" href="css/jquery.animatedheadline.css">
     <link rel="stylesheet" href="/public/css/plugins.css">
     <link rel="stylesheet" href="css/style.css">
